# VstPlugin

./: .gitignore  .travis.yml  AutoPan.hpp  CMakeLists.txt  Chorus.cpp  Chorus.hpp  LICENSE  README.md
mac/: Oscillator.hpp
mac/VstPlugin.xcodeproj/: project.pbxproj
mac/VstPlugin.xcodeproj/xcshareddata/xcschemes/: VstPlugin.xcscheme
mac/VstPlugin.xcodeproj/xcuserdata/alessandro_fazio.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mac/VstPlugin.xcodeproj/xcuserdata/alessandro_fazio.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: AutoPan.hpp  BufferFactory.cpp  BufferFactory.hpp  Chorus.cpp  Chorus.hpp  Delay.cpp  Delay.hpp  GainStereo.cpp  GainStereo.hpp  Interp.hpp  ModOperator.cpp  ModOperator.hpp  Oscillator.cpp  Oscillator.hpp  Smooth.h  Smooth.hpp  SmoothV22.h  VDelay.cpp  VDelay.hpp  VstPlugin.cpp  VstPlugin.hpp
vstsdk2.4/public.sdk/source/vst2.x/: audioeffect.h  audioeffectx.h
